Fix search bar on mobile

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -121,13 +121,18 @@ body {
             justify-content: center;
             align-items: center;
             gap: 40px;
+            padding: 0 100px;
+            @media only screen and (max-width: 500px) {
+              padding: 0 80px;
+            }
             input {
                background: none;
                box-shadow: none;
                border: solid 1px $primary-accent;
                border-radius: 50px;
                padding: 20px 60px;
-               width: 800px;
+               max-width: 800px;
+               width: 100%;
             }
             input[value] {
                 color: white;
